# automated-rota-testing

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  Makefile  README.md  docker-compose.yml  notebook_overrides.yml  pyproject.toml
.github/workflows/: gpu-tests.yml  notebook-imports.yml  notebook-smoke.yml  notebook-tests.yml  unit-tests.yml
colab-enterprise-workflow/: README.md  gpu_test_result.md  run_on_colab.py  setup.sh
notebooks/: test-gsheets-integration.ipynb
scripts/: check_notebook.py  gce_gpu_test.sh  gce_install_deps.sh  gce_startup.sh  generate_manifest.py  inject_solutions.py  run_all_notebooks.py  run_notebook.py  sync_upstream.sh  write_results.py  write_to_sheets.py
tests/: test_feedback_solutions.py  test_generate_manifest.py  test_inject_solutions.py  test_solution_namespace.py  test_utilities.py
